Fixed language syntax highlighting for markdown files. Fixed copy to clipboard for collapsed files.

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -48,9 +48,9 @@ pre {
   #show-snippet & {
     width: calc(50% + 64px);
 
-    &.with-markdown {
-      width: calc(50% + 32px);
-    }
+    //&.with-markdown {
+    //  width: calc(50% + 32px);
+    //}
   }
 }
 
